--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "all": "^0.0.0",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "gatsby-plugin-react-helmet": "^6.11.0",
     "head": "^1.0.0",
     "helmet": "^7.0.0",
+    "http-proxy-middleware": "^2.0.6",
     "milligram": "^1.4.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.6.0",
     "next": "^13.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +26,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "router": "^1.3.8",
+    "server": "^1.0.38",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -30,7 +34,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node ./src/server.js",
+    "client": "node start-client.js",
+    "start2": "concurrently \"npm run server\" \"set PORT=3001 && npm run client\""
   },
   "eslintConfig": {
     "extends": [
