--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-sharp_libvips_local_prebuilds = C:\Users\JiangHuDao\Downloads\
+sharp_libvips_binary_host = "https://npmmirror.com/mirrors/sharp-libvips"
+sharp_binary_host = https://npmmirror.com/mirrors/sharp
