--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "5.0.1",
     "router": "^1.3.8",
     "server": "^1.0.38",
+    "sharp": "^0.32.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,7 +39,7 @@
     "eject": "react-scripts eject",
     "server": "node ./src/server.js",
     "client": "node start-client.js",
-    "start2": "concurrently \"npm run server\" \"set PORT=3001 && npm run client\""
+    "start2": "concurrently \"npm run server\" \"export PORT=3001 && npm run client\""
   },
   "eslintConfig": {
     "extends": [
