--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "milligram": "^1.4.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
+    "mysqldump": "^3.2.0",
     "next": "^13.4.16",
     "node-cron": "^3.0.2",
     "react": "^18.2.0",
